--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -49,7 +49,7 @@
     path: /app
 
 - name: copy backend service file
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: backend.service.j2
     dest: /etc/systemd/system/backend.service
   
