--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -52,6 +52,7 @@
   ansible.builtin.template:
     src: backend.service.j2
     dest: /etc/systemd/system/backend.service
+    remote_src: yes
   
 - name: load schema
   community.mysql.mysql_db:
