--- a/roles/frontend/handlers/main.yaml
+++ b/roles/frontend/handlers/main.yaml
@@ -2,3 +2,8 @@
   ansible.builtin.service:
     name: nginx
     state: restarted
+
+- name: create directory 
+  ansible.builtin.file:
+    path: /usr/share/nginx/html/
+    state: directory
