--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -12,11 +12,8 @@
   ansible.builtin.file:
     path: /usr/share/nginx/html/
     state: absent
-
-- name: create html directory
-  ansible.builtin.file:
-    path: /usr/share/nginx/html/
-    state: directory
+  notify:
+  - create directory 
 
 - name: download app file
   ansible.builtin.get_url:
