--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -12,8 +12,11 @@
   ansible.builtin.file:
     path: /usr/share/nginx/html/
     state: absent
-  notify:
-  - create directory 
+
+- name: create directory 
+  ansible.builtin.file:
+    path: /usr/share/nginx/html/
+    state: directory
 
 - name: download app file
   ansible.builtin.get_url:
