--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -8,41 +8,40 @@
     enabled: yes
     state: started
 
-- name: remove files in html folder
-  ansible.builtin.file:
-    path: /usr/share/nginx/html/
-    state: absent
-  tags:
-  - deploy
+- name: Run tasks/other.yaml instead of 'main'
+  ansible.builtin.include_role:
+    name: common
+    tasks_from: main
 
-- name: create directory 
-  ansible.builtin.file:
-    path: /usr/share/nginx/html/
-    state: directory
-  tags:
-  - deploy
+# - name: remove files in html folder
+#   ansible.builtin.file:
+#     path: /usr/share/nginx/html/
+#     state: absent
+ 
 
-- name: download app file
-  ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
-    dest: /tmp/frontend.zip
-  tags:
-  - deploy  
+# - name: create directory 
+#   ansible.builtin.file:
+#     path: /usr/share/nginx/html/
+#     state: directory
 
-- name: unzip app file
-  ansible.builtin.unarchive:
-    src: /tmp/frontend.zip
-    dest: /usr/share/nginx/html
-    remote_src: yes
-  tags:
-  - deploy
+
+# - name: download app file
+#   ansible.builtin.get_url:
+#     url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+#     dest: /tmp/frontend.zip
+  
+
+# - name: unzip app file
+#   ansible.builtin.unarchive:
+#     src: /tmp/frontend.zip
+#     dest: /usr/share/nginx/html
+#     remote_src: yes
+  
 
 - name: copy expense conf file
   ansible.builtin.template:
     src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
-  tags:
-  - copy
   notify:
   - restart nginx
 
