--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -13,11 +13,10 @@
 - name: download app file
   ansible.builtin.get_url:
     url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-"{{ component }}"-v2.zip
-    dest: "{{ location }}"
-  
+    dest: /tmp/"{{ component }}".zip
 
 - name: unzip app file
   ansible.builtin.unarchive:
-    src: "{{ location }}"
+    src: /tmp/"{{ component }}".zip
     dest: "{{ app_location }}"
     remote_src: yes
