--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -9,14 +9,8 @@
     path: "{{ app_location }}"
     state: directory
 
-
-- name: download app file
-  ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-"{{ component }}"-v2.zip
-    dest: /tmp/"{{ component }}".zip
-
-- name: unzip app file
+- name: download and unzip
   ansible.builtin.unarchive:
-    src: /tmp/"{{ component }}".zip
+    src: "https://expense-builds.s3.us-east-1.amazonaws.com/expense-{{ component }}-v2.zip"
     dest: "{{ app_location }}"
     remote_src: yes
