--- a/arun_apache2_role/meta/main.yml
+++ b/arun_apache2_role/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: Pancee
+  author: arun
   description: install httpd
-  company: iti
+  company: tcs
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
